--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<img src="images/logo.PNG" alt=""></img>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Juan Diego Mendez</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Software Engineer</p>
 							</div>
 						</div>
 						<nav>
@@ -57,48 +56,93 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>I have cultivated a diverse technical background through internships, research, and collaborative projects, here are some of them: </p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<div class="project-box" id="project-box">
+									<div id="image-track" data-mouse-down-at="0" data-prev-percentage="-21">
+										<span class="block">
+											<a href="https://youtu.be/QbnuH11Asyw" target="_blank"><h1 class="project-text">Mixed Reality Interactions using a Depth Camera</h1></a>
+											<img class="image" src="images/projects/MRInteraction.png">
+											<p>Developed a real-time system enabling interactions between virtual objects and the physical environment. Using an Intel RealSense D435 depth camera, I implemented a voxel-based approach that allowed virtual elements to interact with real-world surfaces. The system was integrated with an Oculus Quest 2 headset, demonstrating effective real-time interaction with physical objects. </p>
+										</span>
+										<span class="block">
+											<a href="https://youtu.be/bevee7rBE-o" target="_blank">
+												<h1 class="project-text">Cooperative Virtual Reality Game</h1>
+											</a>
+											<img class="image" src="images/projects/CoopGame.jpg">
+											<p>As part of a development team, I contributed to creating a cooperative VR game using Unity and C#. The game focused on collaboration, immersive combat, and resource management, with interactive crafting and modular weapon systems. I worked on the immersive control system and gameplay mechanics, ensuring a highly interactive and engaging experience. </p>
+										  </span>
+										<span class="block">
+										  	<a href="https://youtu.be/61caBgMfN5U" target="_blank">
+												<h1 class="project-text">Computer Vision HandMouse</h1>
+											</a>
+											<img class="image" src="images/projects/CVHand.png">
+											<p>Designed a real-time hand tracking and gesture recognition system using Python, Google’s Mediapipe, OpenCV, and PyCaw. This system allows users to control Windows OS using hand gestures, designed primarily for accessibility. I utilized multi-threading to optimize gesture recognition, improving real-time performance. </p>
+										</span>
+										<span class="block">
+											<a href="https://www.youtube.com/watch?v=CAAcnSCjZSY" target="_blank">
+												<h1 class="project-text">Capstone 2D Game Project</h1>
+											</a>
+											<img class="image" src="images/projects/HIT_ME.png">
+											<p>Collaborating in a team, we developed a 2D platformer combat game using Unity and C#. My contributions included implementing a grappling hook system, dynamic dice-based stat modifiers, and integrating Agile project management tools like Trello and Git for efficient task management. </p>
+										  </span>
+										<span class="block">
+										  	<a href="https://youtu.be/bwKv3ZvDxf4" target="_blank">
+												<h1 class="project-text">Augmented Reality game</h1>
+											</a>
+											<img class="image" src="images/projects/AR Unity game.jpg">
+											<p>Developed an augmented reality (AR) game featuring a 3D maze overlaid on the real world using a QR code. Built with Unity and Visual Studio, I utilized C# and raycasting techniques for gameplay logic, allowing users to physically navigate and interact with the maze in a real-world environment. </p>
+										</span>
+										<span class="block">
+										 	<a href="https://youtu.be/LsbULHHVllc" target="_blank">
+												<h1 class="project-text">iOS Application</h1>
+											</a>
+											<img class="image" src="images/projects/Task Manager.png">
+											<p>Developed a task management iOS application using Xamarin and C# in Visual Studio. The app allows users to create, edit, prioritize, and track tasks efficiently. The application was built cross-platform, enabling it to run seamlessly on both iOS and Android devices. </p>
+										</span>
+										<span class="block">
+										  	<a href="https://youtu.be/Sak10TAA4rg" target="_blank">
+												<h1 class="project-text">Virtual Reality Avatar</h1>
+											</a>
+											<img class="image" src="images/projects/VRChat.png">
+											<p>Created a VR avatar for use in VR applications and games. The avatar was designed from scratch using Blender and Unity, with expertise in 3D modeling, bone rigging, texturing, shading, and asset creation. The avatar can be integrated into various VR environments for immersive experiences. </p>
+										</span>
+										<span class="block">
+										  	<a href="https://youtu.be/O7ZZXVLvQwk" target="_blank">
+												<h1 class="project-text">Electromagnet Controller</h1>
+											</a>
+											<img class="image" src="images/projects/FerroFluid.jpg">
+											<p>Developed a device using three electromagnets to manipulate ferrofluid in water, controlled by an Arduino board. The device creates mesmerizing visual effects by moving the ferrofluid in response to specific timing and voltage control through custom circuitry and cable soldering. </p>
+										</span>
+									</div>
+								</div>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About me</h2>
 								<p>Born and raised in Colombia, I bring a global perspective and a deep curiosity for technology’s potential to shape the future. Beyond my technical pursuits, I enjoy fencing, photography, and gaming, each fueling my creativity and strategic thinking. I am particularly inspired by the fields of XR, neurotechnology, and cybersecurity, where I see opportunities to develop solutions that were once the realm of science fiction.</p>
-								<span class="image main"><img src="images/me/future.jpg" alt="" /></span>
+								<span class="image main"><img src="images/me/me.jpg" alt="Future" /></span>
 								<p>After graduating, I hope to work for an innovative company pushing the boundaries of what we can do. I am a driven, optimistic, determined, and I am confident that new technologies can lead to a better future. My experiences have prepared me to take on these challenges, and I can't wait to make an impact. My long term goal is to change this world for the better.</p>
-								<span class="image main"><img src="images/torus.GIF" alt="" /></span>
+								<div class="image-row">
+									<span class="image"><img src="images/me/fencing.jpg" alt="Fencing" /></span>
+									<span class="image"><img src="images/torus.GIF" alt="" /></span>
+								</div>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/juan-diego-mendez/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/Jdmg1308" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:juandiegomendezgutierrez@gmail.com" class="chakra-link css-spn4bz" target="_blank" rel="noopener"  >
+											<svg style="color: white;" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+											  stroke-linecap="round" stroke-linejoin="round" height="0.9em" width="1em" xmlns="http://www.w3.org/2000/svg">
+											  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+											  <polyline points="22,6 12,13 2,6"></polyline>
+											</svg>
+										</a>
+									</li>
 								</ul>
 							</article>
 
@@ -348,7 +392,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright"> Juan Diego Mendez </p>
+						<!-- Site design: <a href="https://html5up.net">HTML5 UP</a>. -->
 					</footer>
 
 			</div>
