--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<p>I have cultivated a diverse technical background through internships, research, and collaborative projects, here are some of them: </p>
+								<p>I have developed a diverse technical background through internships, research, and collaborative projects, many of which are detailed in my <a href="Juan Diego Mendez - Resume Dec 2024.pdf" style="color: #008fcc; font-weight: bold; text-decoration: underline;">resume</a>. You can also explore all my projects showcased below—just slide through to take a closer look!</p>
 								<div class="project-box" id="project-box">
 									<div id="image-track" data-mouse-down-at="0" data-prev-percentage="-21">
 										<span class="block">
