--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<model-viewer src="assets_me/HTC_Vive_Headset.gltf" alt="VR Headset" auto-rotate camera-controls ar></model-viewer>
-								<p>Welcome to my professional portfolio! My name is Juan Diego Mendez, and I am a Computer Science student at the University of Texas at Austin, driven by a passion for leveraging technology to solve complex problems and build innovative technologies. My work spans virtual and augmented reality (VR/AR), neurotechnology, and cybersecurity, where I aim to explore the intersection of innovation and practical applications. With experience in software development, immersive systems, and cutting-edge research, I’m dedicated to building transformative solutions that push boundaries and improve lives. Check out my <a href="#work">awesome work</a>.</p>
+								<p>Welcome to my professional portfolio! My name is Juan Diego Mendez, and I am a Computer Science student at the University of Texas at Austin, driven by a passion for leveraging technology to solve complex problems and build innovative technologies. My work spans virtual and augmented reality (VR/AR), Neurotechnology, and Computer Vision, where I aim to explore the intersection of innovation and practical applications. With experience in software development, immersive systems, and cutting-edge research, I’m dedicated to building transformative solutions that push boundaries and improve lives. Check out my <a href="#work">awesome work</a>.</p>
 								<span class="image main"><img src="images/view.jpg" alt="" /></span>
 								<p></p>
 							</article>
@@ -120,7 +120,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About me</h2>
-								<p>Born and raised in Colombia, I bring a global perspective and a deep curiosity for technology’s potential to shape the future. Beyond my technical pursuits, I enjoy fencing, photography, and gaming, each fueling my creativity and strategic thinking. I am particularly inspired by the fields of XR, neurotechnology, and cybersecurity, where I see opportunities to develop solutions that were once the realm of science fiction.</p>
+								<p>Born and raised in Colombia, I bring a global perspective and a deep curiosity for technology’s potential to shape the future. Beyond my technical pursuits, I enjoy fencing, photography, and gaming, each fueling my creativity and strategic thinking. I am particularly inspired by the fields of VR/AR, neurotechnology, and Computer Vision, where I see opportunities to develop solutions that were once the realm of science fiction.</p>
 								<span class="image main"><img src="images/me/me.jpg" alt="Future" /></span>
 								<p>After graduating, I hope to work for an innovative company pushing the boundaries of what we can do. I am a driven, optimistic, determined, and I am confident that new technologies can lead to a better future. My experiences have prepared me to take on these challenges, and I can't wait to make an impact. My long term goal is to change this world for the better.</p>
 								<div class="image-row">
