--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<p>I have developed a diverse technical background through internships, research, and collaborative projects, many of which are detailed in my <a href="Juan Diego Mendez - Resume Dec 2024.pdf" style="color: #008fcc; font-weight: bold; text-decoration: underline;">resume</a>. You can also explore all my projects showcased below—just slide through to take a closer look!</p>
+								<p>I have developed a diverse technical background through internships, research, and collaborative projects, many of which are detailed in my <a href="Juan Diego Mendez - Jan2025.pdf" style="color: #008fcc; font-weight: bold; text-decoration: underline;">resume</a>. You can also explore all my projects showcased below—just slide through to take a closer look!</p>
 								<div class="project-box" id="project-box">
 									<div id="image-track" data-mouse-down-at="0" data-prev-percentage="-21">
+										<span class="block">
+											<h1 class="project-text">Real-Time EEG-Based Binaural Beat System</h1>
+											<img class="image" src="images/projects/bineural.jpg">
+											<p>Currently developing a real-time system that adapts binaural beat frequencies based on live EEG data to influence brainwave activity. The project utilizes asynchronous data streaming to capture brain signals and dynamically modify audio frequencies, aiming to induce specific states of consciousness during meditation. This system explores neuroadaptive audio as a tool for enhancing altered states of awareness and deep mental states.</p>
+										</span>										
 										<span class="block">
 											<a href="https://youtu.be/QbnuH11Asyw" target="_blank"><h1 class="project-text">Mixed Reality Interactions using a Depth Camera</h1></a>
 											<img class="image" src="images/projects/MRInteraction.png">
